# stacky

./: main.c  meson.build
